Fix of 'Export to sql (postgresql, mysql) generates empty tables (with no fields)'.

Sql writer only supports generating code from an entity relation diagram. The
wrong usage of static_cast let classes be written too.

BUG:162373
FIXED-IN:2.15.3 (KDE 14.12.3)